<resources>
    <string name="app_name">CyberFox - Ethical Hacking Guide</string>
    <string name="title_home">HOME</string>
    <string name="title_disclaimer">DISCLAIMER</string>
    <string name="title_aboutus">ABOUT US</string>
    <string name="disclaimer_heading">IMPORTANT DISCLAIMER</string>
    <string name="tools">
        In this chapter, we will discuss in brief some of famous tools that are widely used to prevent hacking and getting unauthorized access to a computer or network system.
    </string>
    <string name="nmap">
        Nmap stands for Network Mapper. It is an open source tool that is used widely for network discovery and security auditing. Nmap was originally designed to scan large networks, but it can work equally well for single hosts. Network administrators also find it useful for tasks such as network inventory, managing service upgrade schedules, and monitoring host or service uptime.\n
        Nmap uses raw IP packets to determine −\n
        -> what hosts are available on the network,\n
        -> what services those hosts are offering,\n
        -> what operating systems they are running on,\n
        -> what type of firewalls are in use, and other such characteristics.
        \nNmap runs on all major computer operating systems such as Windows, Mac OS X, and Linux.
    </string>
    <string name="metasploit">
        Metasploit is one of the most powerful exploit tools. It\’s a product of Rapid7 and most of its resources can be found at: www.metasploit.com. It comes in two versions − commercial and free edition. Matasploit can be used with command prompt or with Web UI.\n
        \nWith Metasploit, you can perform the following operations −\n
        -> Conduct basic penetration tests on small networks\n
        -> Run spot checks on the exploitability of vulnerabilities\n
        -> Discover the network or import scan data\n
        -> Browse exploit modules and run individual exploits on hosts</string>
    <string name="burpsuite">
        Burp Suite is a popular platform that is widely used for performing security testing of web applications. It has various tools that work in collaboration to support the entire testing process, from initial mapping and analysis of an application\'s attack surface, through to finding and exploiting security vulnerabilities.
        \nBurp is easy to use and provides the administrators full control to combine advanced manual techniques with automation for efficient testing. Burp can be easily configured and it contains features to assist even the most experienced testers with their work.
    </string>
    <string name="wireshark">
        Wireshark is the world\’s foremost and widely-used network protocol analyzer. It lets you see what’s happening on your network at a microscopic level and is the de facto (and often de jure) standard across many commercial and non-profit enterprises, government agencies, and educational institutions. Wireshark development thrives thanks to the volunteer contributions of networking experts around the globe and is the continuation of a project started by Gerald Combs in 1998.
        \n\nWireshark has a rich feature set which includes the following:\n
        -> Deep inspection of hundreds of protocols, with more being added all the time\n
        -> Live capture and offline analysis\n
        -> Standard three-pane packet browser\n
        -> Multi-platform: Runs on Windows, Linux, macOS, Solaris, FreeBSD, NetBSD, and many others\n
        -> Captured network data can be browsed via a GUI, or via the TTY-mode TShark utility\n
        -> The most powerful display filters in the industry\n
        -> Rich VoIP analysis\n
        -> Read/write many different capture file formats: tcpdump (libpcap), Pcap NG, Catapult DCT2000, Cisco Secure IDS iplog, Microsoft Network Monitor, Network General Sniffer® (compressed and uncompressed), Sniffer® Pro, and NetXray®, Network Instruments Observer, NetScreen snoop, Novell LANalyzer, RADCOM WAN/LAN Analyzer, Shomiti/Finisar Surveyor, Tektronix K12xx, Visual Networks Visual UpTime, WildPackets EtherPeek/TokenPeek/AiroPeek, and many others\n
        -> Capture files compressed with gzip can be decompressed on the fly\n
        -> Live data can be read from Ethernet, IEEE 802.11, PPP/HDLC, ATM, Bluetooth, USB, Token Ring, Frame Relay, FDDI, and others (depending on your platform)\n
        -> Decryption support for many protocols, including IPsec, ISAKMP, Kerberos, SNMPv3, SSL/TLS, WEP, and WPA/WPA2\n
        -> Coloring rules can be applied to the packet list for quick, intuitive analysis\n
        -> Output can be exported to XML, PostScript, CSV, or plain text
    </string>
    <string name="angryipscanner">
        Angry IP scanner is a lightweight, cross-platform IP address and port scanner. It can scan IP addresses in any range. It can be freely copied and used anywhere. In order to increase the scanning speed, it uses multithreaded approach, wherein a separate scanning thread is created for each scanned IP address.
        \nAngry IP Scanner simply pings each IP address to check if it’s alive, and then, it resolves its hostname, determines the MAC address, scans ports, etc. The amount of gathered data about each host can be saved to TXT, XML, CSV, or IP-Port list files. With help of plugins, Angry IP Scanner can gather any information about scanned IPs.
    </string>
    <string name="cain_and_abel">
        Cain &amp; Abel is a password recovery tool for Microsoft Operating Systems. It helps in easy recovery of various kinds of passwords by employing any of the following methods −\n
        -> sniffing the network,\n
        -> cracking encrypted passwords using Dictionary, Brute-Force and Cryptanalysis attacks,\n
        -> recording VoIP conversations,\n
        -> decoding scrambled passwords,\n
        -> recovering wireless network keys,\n
        -> revealing password boxes,\n
        -> uncovering cached passwords and analyzing routing protocols.\n\n
        Cain &amp; Abel is a useful tool for security consultants, professional penetration testers and everyone else who plans to use it for ethical reasons.
    </string>
    <string name="ettercap">
        Ettercap stands for Ethernet Capture. It is a network security tool for Man-in-the-Middle attacks. It features sniffing of live connections, content filtering on the fly and many other interesting tricks. Ettercap has inbuilt features for network and host analysis. It supports active and passive dissection of many protocols.
        You can run Ettercap on all the popular operating systems such as Windows, Linux, and Mac OS X.
    </string>
    <string name="superscan">
        SuperScan is a powerful tool for network administrators to scan TCP ports and resolve hostnames. It has a user friendly interface that you can use to −\n
        -> Perform ping scans and port scans using any IP range.\n
        -> Scan any port range from a built-in list or any given range.\n
        -> View responses from connected hosts.\n
        -> Modify the port list and port descriptions using the built in editor.\n
        -> Merge port lists to build new ones.\n
        -> Connect to any discovered open port.\n
        -> Assign a custom helper application to any port.
    </string>
    <string name="webinspect">
        WebInspect is a web application security assessment tool that helps identify known and unknown vulnerabilities within the Web application layer.
        \nIt can also help check that a Web server is configured properly, and attempts common web attacks such as parameter injection, cross-site scripting, directory traversal, and more.
    </string>
    <string name="networkstumbler">
        Network stumbler is a WiFi scanner and monitoring tool for Windows. It allows network professionals to detect WLANs. It is widely used by networking enthusiasts and hackers because it helps you find non-broadcasting wireless networks.
        \nNetwork Stumbler can be used to verify if a network is well configured, its signal strength or coverage, and detect interference between one or more wireless networks. It can also be used to non-authorized connections.
    </string>
    <string name="process">
        Like all good projects, ethical hacking too has a set of distinct phases. It helps hackers to make a structured ethical hacking attack.\n
        Different security training manuals explain the process of ethical hacking in different ways, but for me as a Certified Ethical Hacker, the entire process can be categorized into the following six phases.
    </string>
    <string name="recon">
        Reconnaissance is the phase where the attacker gathers information about a target using active or passive means. The tools that are widely used in this process are NMAP, Hping, Maltego, and Google Dorks.
    </string>
    <string name="scanning">
        In this process, the attacker begins to actively probe a target machine or network for vulnerabilities that can be exploited. The tools used in this process are Nessus, Nexpose, and NMAP.
    </string>
    <string name="gainingaccess">
        In this process, the vulnerability is located and you attempt to exploit it in order to enter into the system. The primary tool that is used in this process is Metasploit.
    </string>
    <string name="maintainingaccess">
        It is the process where the hacker has already gained access into a system. After gaining access, the hacker installs some backdoors in order to enter into the system when he needs access in this owned system in future. Metasploit is the preferred tool in this process.
    </string>
    <string name="clearingtracks">
        This process is actually an unethical activity. It has to do with the deletion of logs of all the activities that take place during the hacking process.
    </string>
    <string name="reporting">
        Reporting is the last step of finishing the ethical hacking process. Here the Ethical Hacker compiles a report with his findings and the job that was done such as the tools used, the success rate, vulnerabilities found, and the exploit processes.
    </string>
    <string name="quicktip">
        The processes are not standard. You can adopt a set of different processes and tools according to your techniques that you are comfortable with. The process is of least significance as long as you are able to get the desired results.
    </string>
    <string name="reconnaissance">
        Information Gathering and getting to know the target systems is the first process in ethical hacking. Reconnaissance is a set of processes and techniques (Footprinting, Scanning &amp; Enumeration) used to covertly discover and collect information about a target system.\n\n
        During reconnaissance, an ethical hacker attempts to gather as much information about a target system as possible, following the seven steps listed below −\n
        -> Gather initial information\n
        -> Determine the network range\n
        -> Identify active machines\n
        -> Discover open ports and access points\n
        -> Fingerprint the operating system\n
        -> Uncover services on ports\n
        -> Map the network\n\n
        Reconnaissance takes place in two parts − Active Reconnaissance and Passive Reconnaissance.
    </string>
    <string name="activerecon">
        In this process, you will directly interact with the computer system to gain information. This information can be relevant and accurate. But there is a risk of getting detected if you are planning active reconnaissance without permission. If you are detected, then system admin can take severe action against you and trail your subsequent activities.
    </string>
    <string name="passiverecon">
        In this process, you will not be directly connected to a computer system. This process is used to gather essential information without ever interacting with the target systems.
    </string>
</resources>